# podcast-to-md-tool-for-agent

./: .env.example  .gitignore  README.md  pyproject.toml  test_pipeline.py
docker/: Dockerfile  docker-compose.yml
src/: celery_app.py  config.py  main.py  mcp_server.py
src/api/: router.py
src/api/v1/endpoints/: health.py  podcast.py
src/api/v1/schemas/: request.py  response.py
src/layers/audio/: chunker.py  extractor.py
src/layers/memory/: compressor.py  token_budget.py
src/layers/output/: assembler.py
src/layers/resolver/: apple.py  factory.py  generic.py  rss.py  youtube.py
src/layers/semantic/: llm_client.py  single_pass.py  summarizer.py
src/layers/transcription/: factory.py  groq_whisper.py  openrouter_asr.py  whisper_local.py
src/pipeline/: orchestrator.py  tasks.py
src/storage/: database.py  models.py  repository.py
src/utils/: audio_utils.py  url_utils.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_chunker.py  test_resolver.py  test_token_budget.py
